test/tests/stages/8_loops/valid/empty_loop_body.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(2147483642)
  ;
  do
  ;
  while
  (
  (
  identifier(i)
  =
  identifier(i)
  -
  const int(5)
  )
  >=
  const int(256)
  )
  ;
  return
  identifier(i)
  ;
  }
