test/tests/stages/8_loops/invalid_parse/do_while_empty_parens.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  do
  const int(1)
  ;
  while
  (
  )
  ;
  return
  const int(0)
  ;
  }
